--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.7,<3.11"
 dependencies = [
   "jax>=0.4.2",
-  "triton==2.0.0.dev20221202",
+  "triton==2.0.0a2",
 ]
 
 [build-system]
