Make it explicit that `jax_triton` depends on `absl-py`.
PiperOrigin-RevId: 520980211

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "JAX + OpenAI Triton integration"
 readme = "README.md"
 requires-python = ">=3.7,<3.11"
 dependencies = [
+  "absl-py>=1.4.0",
   "jax>=0.4.2",
   "triton==2.0.0.dev20221202",
 ]
