--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -7,7 +7,16 @@ pybind_extension(
     name = "triton_kernel_call_lib",
     srcs = ["lib/triton_kernel_call.cc"],
     deps = [
+        "@com_google_absl//absl/base:core_headers",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/log",
+        "@com_google_absl//absl/log:check",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings:str_format",
+        "@com_google_absl//absl/synchronization",
         "@cuda//:cuda_headers",
         "@cuda//:libcuda",
+        "@pybind11_abseil//pybind11_abseil:status_casters",
     ],
 )
