Defer call to `cuCtxPopCurrent` to fix error when Triton kernel call is launched on thread with no active CUDA context.
PiperOrigin-RevId: 525240550

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -8,6 +8,7 @@ pybind_extension(
     srcs = ["lib/triton_kernel_call.cc"],
     deps = [
         "@com_google_absl//absl/base:core_headers",
+        "@com_google_absl//absl/cleanup",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/log",
         "@com_google_absl//absl/log:check",
