Initial pallas docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,8 @@ plugins:
 
 nav:
   - "index.md"
-  - "triton_call.md"
+  - Guides:
+    - guides/triton_call.md
+    - guides/pallas.md
 
 strict: true
