--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,7 @@ dependencies = [
 ]
 
 [build-system]
-requires = ["setuptools", "setuptools-scm"    "cmake",
-]
+requires = ["setuptools", "setuptools-scm", "cmake"]
 build-backend = "setuptools.build_meta"
 
 [tools.setuptools]
