Add if conditional to GPU tests to only run on PRs and pushs to main repo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
           python-version: '3.10'
       - uses: pre-commit/action@2c7b3805fd2a0fd8c1884dcaebf91fc102a13ecd # ratchet:pre-commit/action@v3.0.1
   test:
+    if: github.repository == 'jax-ml/jax-triton' # Don't execute in fork due to runner type
     runs-on: linux-x86-g2-48-l4-4gpu
     container:
       image:  index.docker.io/library/ubuntu@sha256:0e5e4a57c2499249aafc3b40fcd541e9a456aab7296681a3994d631587203f97 # ratchet:ubuntu:22.04
