fix: handle triton 3.3.0 release which released without latest changes
PiperOrigin-RevId: 753297965

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
           python-version: '3.10'
     -   name: Setup Released JAX and Torch
         run: |
+          # triton needs a compiler
+          apt-get update && apt-get install -y build-essential
           pip install torch
           pip install -U "jax[cuda12]"
           pip install pytest
